--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,128 +1,168 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%; }
+  height: 100%;
+}
 
 html {
-  font-family: "source-code-pro",sans-serif;
+  font-family: 'source-code-pro',sans-serif;
   font-size: 1rem;
-  line-height: 1.4; }
+  line-height: 1.4;
+}
 
 body {
   color: #333333;
   background-color: #111111;
-  text-size-adjust: 100%;
+          text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+      -ms-text-size-adjust: 100%;
+}
 
 a {
   color: inherit;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
-  -webkit-transition: .4s;
-  transition: .4s; }
-  @media screen and (min-width: 38rem) {
-    a {
-      letter-spacing: .1rem; } }
-  a:hover, a:focus {
-    color: #444444;
-    text-decoration: none;
-    -webkit-transition: .4s;
-    transition: .4s; }
+  -webkit-transition: 0.4s;
+          transition: 0.4s;
+}
+@media screen and (min-width: 38rem) {
+  a {
+    letter-spacing: 0.1rem;
+  }
+}
+a:hover,
+a:focus {
+  color: #444444;
+  text-decoration: none;
+  -webkit-transition: 0.4s;
+          transition: 0.4s;
+}
 
 img,
 picture {
   display: block;
   min-width: 100%;
-  margin: 0 auto; }
-  img::-moz-selection,
-  picture::-moz-selection {
-    background-color: transparent; }
-  img::selection,
-  picture::selection {
-    background-color: transparent; }
-  img.logo,
-  picture.logo {
-    max-width: 18rem;
-    margin-bottom: 1rem; }
+  margin: 0 auto;
+}
+img::-moz-selection,
+picture::-moz-selection {
+  background-color: transparent;
+}
+img::selection,
+picture::selection {
+  background-color: transparent;
+}
+img.logo,
+picture.logo {
+  max-width: 18rem;
+  margin-bottom: 1rem;
+}
+img.bg,
+picture.bg {
+  min-height: 100%;
+  min-width: 76rem;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0.06;
+}
+@media screen and (max-width: 76rem) {
   img.bg,
   picture.bg {
-    min-height: 100%;
-    min-width: 76rem;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    opacity: .06; }
-    @media screen and (max-width: 76rem) {
-      img.bg,
-      picture.bg {
-        left: 50%;
-        margin-left: -38rem; } }
+    left: 50%;
+    margin-left: -38rem;
+  }
+}
 
 hr {
   border: #FFDC00 solid 0;
   border-bottom-width: 1.2rem;
-  margin: 1.6rem 0; }
+  margin: 1.6rem 0;
+}
 
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5rem;
   font-weight: bold;
   line-height: 1.25;
   color: inherit;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+}
 
 h1 {
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+}
 
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem; }
+  font-size: 1.25rem;
+}
 
-h4, h5, h6 {
+h4,
+h5,
+h6 {
   margin-top: 1rem;
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
 small {
-  font-size: 90%; }
+  font-size: 90%;
+}
 
 strong {
-  color: inherit; }
+  color: inherit;
+}
 
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
-ul, ol {
+ul,
+ol {
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 ::-moz-selection {
   color: #FFFFFF;
-  background-color: #FFDC00; }
+  background-color: #FFDC00;
+}
 
 ::selection {
   color: #FFFFFF;
-  background-color: #FFDC00; }
+  background-color: #FFDC00;
+}
 
 ::moz-selection {
   color: #FFFFFF;
-  background-color: #FFDC00; }
+  background-color: #FFDC00;
+}
 
 main {
   position: relative;
@@ -132,39 +172,49 @@ main {
   margin-bottom: -3.6rem;
   margin-left: auto;
   margin-right: auto;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 main::after {
-  content: "";
-  display: block; }
+  content: '';
+  display: block;
+}
 
 section {
   position: relative;
   text-align: center;
-  padding-top: 4.2rem; }
-  @media (min-width: 38em) {
-    section {
-      position: absolute;
-      bottom: 4.2rem;
-      padding-top: 0; } }
+  padding-top: 4.2rem;
+}
+@media (min-width: 38em) {
+  section {
+    position: absolute;
+    bottom: 4.2rem;
+    padding-top: 0;
+  }
+}
 
-footer, main::after {
-  height: 3.6rem; }
+footer,
+main::after {
+  height: 3.6rem;
+}
 
 footer {
   height: 3.6rem;
   width: 100%;
   max-width: 160rem;
   text-align: center;
-  font-size: .8rem;
+  font-size: 0.8rem;
   line-height: 1;
   line-height: 1.4;
   padding-left: 1.5rem;
-  padding-right: 1.5rem; }
-  @media (min-width: 38em) {
-    footer {
-      text-align: left;
-      font-size: 1rem; } }
+  padding-right: 1.5rem;
+}
+@media (min-width: 38em) {
+  footer {
+    text-align: left;
+    font-size: 1rem;
+  }
+}
 
 .button,
 button {
@@ -187,14 +237,19 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #222222;
-  border-radius: 1.8rem; }
-  @media (min-width: 38em) {
-    .button,
-    button {
-      letter-spacing: .1rem; } }
+  border: 0.15rem solid #222222;
+  border-radius: 1.8rem;
+}
+@media (min-width: 38em) {
+  .button,
+  button {
+    letter-spacing: 0.1rem;
+  }
+}
 
-input[type='submit'], input[type='reset'], input[type='button'] {
+input[type='submit'],
+input[type='reset'],
+input[type='button'] {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
@@ -214,31 +269,44 @@ input[type='submit'], input[type='reset'], input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #222222;
-  border-radius: 1.8rem; }
-  @media (min-width: 38em) {
-    input[type='submit'], input[type='reset'], input[type='button'] {
-      letter-spacing: .1rem; } }
+  border: 0.15rem solid #222222;
+  border-radius: 1.8rem;
+}
+@media (min-width: 38em) {
+  input[type='submit'],
+  input[type='reset'],
+  input[type='button'] {
+    letter-spacing: 0.1rem;
+  }
+}
 
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
-input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
+input[type='submit']:hover,
+input[type='reset']:hover,
+input[type='button']:hover {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
 .button:focus,
 button:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0; }
+  outline: 0;
+}
 
-input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focus {
+input[type='submit']:focus,
+input[type='reset']:focus,
+input[type='button']:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0; }
+  outline: 0;
+}
 
 
 
