--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="animated fadeInUp">
+  <small>Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</small><br>
+  <br><a href="">Imprint</a><br>
   <small><i class="fa fa-fw fa-code"></i> with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br>
   <small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
 </footer>
