--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,23 @@
       <img src="{{ site.baseurl }}/assets/images/bg.jpg">
     </picture>
     <main id="content">
+      <header>
+      <hr class="animated fadeInLeftBig">
+      <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
+        <nav>
+          <p>
+            <a href="#">Work</a>
+            <a href="#">Labs</a>
+            <a href="mailto:hello@studiocraft.cc">Contact</a>
+          </p>
+          <p>
+            <a href="#"><i class="fa fa-fw fa-rss"></i></a>
+            <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-fw fa-google-plus"></i></a>
+            <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+          </p>
+        </nav>
+      <header>
     {{ content }}
     </main>
     {% include footer.html %}
