--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,31 +9,31 @@ body {
 
 html {
   font-family: "source-code-pro",sans-serif;
-  font-size: 1rem;
-  line-height: 1.4; }
+  line-height: 1.4;
+  font-size: 62.5%; }
 
 body {
   color: #333333;
+  font-size: 1.4rem;
   background-color: #111111;
   text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
 
 a {
-  color: inherit;
+  color: #FFDC00;
   font-weight: 700;
   text-transform: uppercase;
-  text-decoration: none;
-  -webkit-transition: .4s;
-  transition: .4s; }
+  text-decoration: none; }
   @media screen and (min-width: 38rem) {
     a {
       letter-spacing: .1rem; } }
   a:hover, a:focus {
-    color: #444444;
-    text-decoration: none;
-    -webkit-transition: .4s;
-    transition: .4s; }
+    color: #ddbf00;
+    text-decoration: underline; }
+  a:active, a:visited {
+    color: #ddbf00;
+    text-decoration: underline; }
 
 img,
 picture {
@@ -53,33 +53,32 @@ picture {
   img.bg,
   picture.bg {
     min-height: 100%;
-    min-width: 76rem;
+    min-width: 152rem;
     width: 100%;
     height: auto;
     position: fixed;
     top: 0;
     left: 0;
     opacity: .06; }
-    @media screen and (max-width: 76rem) {
+    @media screen and (max-width: 152rem) {
       img.bg,
       picture.bg {
         left: 50%;
-        margin-left: -38rem; } }
+        margin-left: -76rem; } }
 
 hr {
   border: #FFDC00 solid 0;
-  border-bottom-width: 1.2rem;
-  margin: 1.6rem 0; }
+  border-bottom-width: 4.2rem;
+  margin-bottom: 3.2rem; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: bold;
   line-height: 1.25;
   color: inherit;
   text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 2rem; }
+  font-size: 3.6rem; }
 
 h2 {
   margin-top: 1rem;
@@ -94,11 +93,9 @@ h4, h5, h6 {
   font-size: 1rem; }
 
 p {
+  font-size: 1.8rem;
   margin-top: 0;
-  margin-bottom: 1rem; }
-
-small {
-  font-size: 90%; }
+  margin-bottom: 1.6rem; }
 
 strong {
   color: inherit; }
@@ -126,10 +123,9 @@ ul, ol {
 
 main {
   position: relative;
-  max-width: 160rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  margin-bottom: -3.6rem;
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  margin-bottom: -16rem;
   margin-left: auto;
   margin-right: auto;
   min-height: 100%; }
@@ -138,33 +134,30 @@ main::after {
   content: "";
   display: block; }
 
-section {
+header, section {
   position: relative;
-  text-align: center;
-  padding-top: 4.2rem; }
+  padding-top: 1.6rem; }
   @media (min-width: 38em) {
-    section {
-      position: absolute;
-      bottom: 4.2rem;
-      padding-top: 0; } }
+    header, section {
+      width: 50%;
+      max-width: 42.334rem; } }
+
+section > nav {
+  margin-bottom: 12rem; }
 
 footer, main::after {
-  height: 3.6rem; }
+  height: 24rem; }
 
 footer {
-  height: 3.6rem;
+  height: 16rem;
   width: 100%;
-  max-width: 160rem;
-  text-align: center;
-  font-size: .8rem;
-  line-height: 1;
   line-height: 1.4;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem; }
+  padding-left: 1.6rem;
+  padding-right: 1.6rem; }
   @media (min-width: 38em) {
     footer {
-      text-align: left;
-      font-size: 1rem; } }
+      width: 50%;
+      max-width: 42.334rem; } }
 
 .button,
 button {
