--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -4,10 +4,9 @@
 
 main {
   position: relative;
-  max-width: 160rem;
-  padding-left:  1.5rem;
-  padding-right: 1.5rem;
-  margin-bottom: -3.6rem;
+  padding-left:  1.6rem;
+  padding-right: 1.6rem;
+  margin-bottom: -16rem;
   margin-left:  auto;
   margin-right: auto;
   min-height: 100%;
@@ -18,35 +17,33 @@ main::after {
   display: block;
 }
 
-section {
+header, section {
   position: relative;
-  text-align: center;
-  padding-top: 4.2rem;
+  padding-top: 1.6rem;
 
   @media (min-width: 38em) {
-    position: absolute;
-    bottom: 4.2rem;
-    padding-top: 0;
+    width: 50%;
+    max-width: 42.334rem;
   }
 }
 
+section > nav {
+  margin-bottom: 12rem;
+}
+
 footer, main::after {
-  height: 3.6rem;
+  height: 24rem;
 }
 
 footer {
-  height: 3.6rem;
+  height: 16rem;
   width: 100%;
-  max-width: 160rem;
-  text-align: center;
-  font-size: .8rem;
-  line-height: 1;
   line-height: 1.4;
-  padding-left:  1.5rem;
-  padding-right: 1.5rem;
+  padding-left:  1.6rem;
+  padding-right: 1.6rem;
 
   @media (min-width: 38em) {
-    text-align: left;
-    font-size: 1rem;
+    width: 50%;
+    max-width: 42.334rem;
   }
 }
