--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/nanobar/0.2.1/nanobar.min.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-77290484-1', 'auto');
+  ga('send', 'pageview');
+</script>
 {% else %}
 <script src="{{ site.baseurl }}assets/js/main.js"></script>
 {% endif %}
