--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
 <footer class="animated fadeInUp">
-  <small>Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</small><br>
-  <br><a href="">Imprint</a><br>
-  <small><i class="fa fa-fw fa-code"></i> with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br>
-  <small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
+  <nav>
+    <ul>
+      <li><a href="#"><small>Imprint</small></a></li>
+    </ul>
+  </nav>
+  <p><small><i class="fa fa-fw fa-code"></i> with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br><small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small></p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/nanobar/0.2.1/nanobar.min.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
 <script>
