--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
 <meta name="author" content="Bryan Colosky">
 <title>{{ site.title }}</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" rel="stylesheet">
 {% if site.github %}
 <link href="{{ site.baseurl }}dist/css/main.min.css" rel="stylesheet">
 {% else %}
 <link href="{{ site.baseurl }}assets/css/app.css" rel="stylesheet">
 {% endif %}
+<script src="https://use.fontawesome.com/fb3b930dc0.js"></script>
 <script src="https://use.typekit.net/haz4qyi.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 {% include favicons.html %}
