--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -23,7 +23,7 @@ html {
 
 body {
   color: #333333;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   background-color: #111111;
   text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -60,8 +60,12 @@ picture {
   min-width: 100%;
   margin: 0 auto;
 
-  &::selection {
-    background-color: transparent;
+  ::selection {
+    background-color: #333333;
+  }
+
+  ::moz-selection {
+    background-color: #333333;
   }
 
   &.logo {
@@ -70,18 +74,22 @@ picture {
   }
 
   &.bg {
-    min-height: 100%;
-    min-width: 152rem;
-    width: 100%;
-    height: auto;
+    height: 200%;
+    width: 200%;
     position: fixed;
-    top: 0;
-    left: 0;
-    opacity: .06;
+    top: -50%;
+    left: -50%;
 
-    @media screen and (max-width: 152rem) {
-      left: 50%;
-      margin-left: -76rem;
+    img {
+      opacity: .06;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      min-width: 50%;
+      min-height: 50%;
     }
   }
 }
