--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,11 @@
       <hr>
       <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
         <nav>
-          <ul>
-            <li><a href="{{ site.baseurl }}/#work">Work</a></li>
-            <!-- <li><a href="#">Labs</a></li> -->
-            <li><a href="{{ site.baseurl }}/#articles">Articles</a></li>
-            <li><a href="mailto:hello@studiocraft.cc">Contact</a></li>
-            <!-- <li><a href="#">Contact</a></li> -->
+          <ul data-gumshoe>
+            <li><a href="{{ site.baseurl }}/#urban">Urban</a></li>
+            <li><a href="{{ site.baseurl }}/#art">Art</a></li>
+            <li><a href="{{ site.baseurl }}/#furniture">Furniture</a></li>
+            <li><a href="{{ site.baseurl }}/#contact">Contact</a></li>
           </ul>
           <ul>
             <li>
