--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,10 @@
 <meta name="author" content="Bryan Colosky">
 <title>{{ site.title }}</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://npmcdn.com/flickity@2.0/dist/flickity.css" media="screen">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gumshoe/3.1.2/js/gumshoe.min.js"></script>
+<script src="https://npmcdn.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
 {% if site.github %}
 <link href="{{ site.baseurl }}dist/css/main.min.css" rel="stylesheet">
 {% else %}
