--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -30,7 +30,7 @@ header, section {
 nav ul {
   list-style: none;
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: 1.6rem;
 
   > li {
     display: inline;
@@ -56,4 +56,34 @@ footer {
     width: 50%;
     max-width: 42.334rem;
   }
+}
+
+
+/* external css: flickity.css */
+
+.carousel {
+  background: #FAFAFA;
+}
+
+.carousel-cell {
+  width: 66%;
+  height: 400px;
+  margin-right: 10px;
+  background: #333;
+}
+
+.carousel-cell-image {
+  display: block;
+  max-height: 100%;
+  margin: 0 auto;
+  max-width: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s;
+          transition: opacity 0.4s;
+}
+
+/* fade in lazy loaded image */
+.carousel-cell-image.flickity-lazyloaded,
+.carousel-cell-image.flickity-lazyerror {
+  opacity: 1;
 }
