--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,29 @@
 <footer class="animated fadeInUp">
   <nav>
     <ul>
-      <li><a href="#"><small>Imprint</small></a></li>
+      <li>
+        <a href="#" title="RSS"><i class="fa fa-fw fa-rss" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#" title="Twitter"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#" title="Google Plus"><i class="fa fa-fw fa-google-plus" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#" title="Instagram"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a>
+      </li>
+      <li><a href="mailto:hello@studiocraft.cc"><small>Contact</small></a></li>
+      <li><a href="{{ site.baseurl }}/imprint"><small>Imprint</small></a></li>
     </ul>
   </nav>
-  <p><small><i class="fa fa-fw fa-code"></i> with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br><small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small></p>
+  <p><small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small></p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+<script src="https://npmcdn.com/packery@2.1/dist/packery.pkgd.min.js"></script>
+<script src="https://npmcdn.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
 <script>
