--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,13 +15,13 @@ html {
 body {
   color: #333333;
   font-size: 1.6rem;
-  background-color: #111111;
+  background-color: #eeeeee;
   text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
 
 a {
-  color: #FFDC00;
+  color: #333333;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none; }
@@ -29,53 +29,17 @@ a {
     a {
       letter-spacing: .1rem; } }
   a:hover, a:focus {
-    color: #ddbf00;
+    color: #222222;
     text-decoration: underline; }
   a:active, a:visited {
-    color: #ddbf00;
+    color: #2a2a2a;
     text-decoration: underline; }
 
-img,
-picture {
-  display: block;
-  min-width: 100%;
-  margin: 0 auto; }
-  img ::-moz-selection,
-  picture ::-moz-selection {
-    background-color: #333333; }
-  img ::selection,
-  picture ::selection {
-    background-color: #333333; }
-  img ::moz-selection,
-  picture ::moz-selection {
-    background-color: #333333; }
-  img.logo,
-  picture.logo {
-    max-width: 18rem;
-    margin-bottom: 1rem; }
-  img.bg,
-  picture.bg {
-    height: 200%;
-    width: 200%;
-    position: fixed;
-    top: -50%;
-    left: -50%; }
-    img.bg img,
-    picture.bg img {
-      opacity: .06;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      min-width: 50%;
-      min-height: 50%; }
-
-hr {
-  border: #FFDC00 solid 0;
-  border-bottom-width: 4.2rem;
-  margin-bottom: 3.2rem; }
+img {
+  display: block; }
+  img.logo {
+    max-width: 48rem;
+    margin-bottom: 1.6rem; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
@@ -139,14 +103,6 @@ main::after {
   content: "";
   display: block; }
 
-header, section {
-  position: relative;
-  padding-top: 1.6rem; }
-  @media (min-width: 38em) {
-    header, section {
-      width: 50%;
-      max-width: 42.334rem; } }
-
 nav ul {
   list-style: none;
   display: block;
@@ -157,6 +113,10 @@ nav ul {
   nav ul > li:first-child {
     margin-left: 0; }
 
+header {
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem; }
+
 footer, main::after {
   height: 10rem; }
 
@@ -165,33 +125,110 @@ footer {
   line-height: 1.4;
   padding-left: 1.6rem;
   padding-right: 1.6rem; }
-  @media (min-width: 38em) {
-    footer {
-      width: 50%;
-      max-width: 42.334rem; } }
 
-/* external css: flickity.css */
-.carousel {
-  background: #FAFAFA; }
-
-.carousel-cell {
-  width: 66%;
-  height: 400px;
-  margin-right: 10px;
-  background: #333; }
-
-.carousel-cell-image {
+/* ---- isotope ---- */
+/* clear fix */
+.grid:after {
+  content: '';
   display: block;
-  max-height: 100%;
-  margin: 0 auto;
-  max-width: 100%;
-  opacity: 0;
-  transition: opacity 0.4s; }
+  clear: both; }
 
-/* fade in lazy loaded image */
-.carousel-cell-image.flickity-lazyloaded,
-.carousel-cell-image.flickity-lazyerror {
-  opacity: 1; }
+/* ---- .element-item ---- */
+.element-item {
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  background: #888;
+  color: #262524; }
+
+.element-item > * {
+  margin: 0;
+  padding: 0; }
+
+.element-item .name {
+  position: absolute;
+  left: 10px;
+  top: 60px;
+  text-transform: none;
+  letter-spacing: 0;
+  font-size: 12px;
+  font-weight: normal; }
+
+.element-item .symbol {
+  position: absolute;
+  left: 10px;
+  top: 0px;
+  font-size: 42px;
+  font-weight: bold;
+  color: white; }
+
+.element-item .number {
+  position: absolute;
+  right: 8px;
+  top: 5px; }
+
+.element-item .weight {
+  position: absolute;
+  left: 10px;
+  top: 76px;
+  font-size: 12px; }
+
+.element-item.street {
+  background: #FFDC00; }
+
+.element-item.architecture {
+  background: #CCFF00; }
+
+.element-item.nature {
+  background: #39CCCC; }
+
+.element-item.travel {
+  background: #F012BE; }
+
+.element-item.portrait {
+  background: #0074D9; }
+
+.element-item.alkali {
+  background: #F00;
+  background: red; }
+
+.element-item.alkaline-earth {
+  background: #F80;
+  background: #ff9900; }
+
+.element-item.lanthanoid {
+  background: #FF0;
+  background: #ccff00; }
+
+.element-item.actinoid {
+  background: #0F0;
+  background: #33ff00; }
+
+.element-item.transition {
+  background: #0F8;
+  background: #00ff66; }
+
+.element-item.post-transition {
+  background: #0FF;
+  background: cyan; }
+
+.element-item.metalloid {
+  background: #08F;
+  background: #0066ff; }
+
+.element-item.diatomic {
+  background: #00F;
+  background: #3300ff; }
+
+.element-item.halogen {
+  background: #F0F;
+  background: #cc00ff; }
+
+.element-item.noble-gas {
+  background: #F08;
+  background: #ff0099; }
 
 .button,
 button {
