--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -17,16 +17,6 @@ main::after {
   display: block;
 }
 
-header, section {
-  position: relative;
-  padding-top: 1.6rem;
-
-  @media (min-width: 38em) {
-    width: 50%;
-    max-width: 42.334rem;
-  }
-}
-
 nav ul {
   list-style: none;
   display: block;
@@ -42,6 +32,11 @@ nav ul {
     }
   }
 
+header {
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+}
+
 footer, main::after {
   height: 10rem;
 }
@@ -51,39 +46,81 @@ footer {
   line-height: 1.4;
   padding-left:  1.6rem;
   padding-right: 1.6rem;
-
-  @media (min-width: 38em) {
-    width: 50%;
-    max-width: 42.334rem;
-  }
 }
 
+/* ---- isotope ---- */
 
-/* external css: flickity.css */
-
-.carousel {
-  background: #FAFAFA;
-}
-
-.carousel-cell {
-  width: 66%;
-  height: 400px;
-  margin-right: 10px;
-  background: #333;
-}
-
-.carousel-cell-image {
+/* clear fix */
+.grid:after {
+  content: '';
   display: block;
-  max-height: 100%;
-  margin: 0 auto;
-  max-width: 100%;
-  opacity: 0;
-  -webkit-transition: opacity 0.4s;
-          transition: opacity 0.4s;
+  clear: both;
 }
 
-/* fade in lazy loaded image */
-.carousel-cell-image.flickity-lazyloaded,
-.carousel-cell-image.flickity-lazyerror {
-  opacity: 1;
+/* ---- .element-item ---- */
+
+.element-item {
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  background: #888;
+  color: #262524;
 }
+
+.element-item > * {
+  margin: 0;
+  padding: 0;
+}
+
+.element-item .name {
+  position: absolute;
+  left: 10px;
+  top: 60px;
+  text-transform: none;
+  letter-spacing: 0;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.element-item .symbol {
+  position: absolute;
+  left: 10px;
+  top: 0px;
+  font-size: 42px;
+  font-weight: bold;
+  color: white;
+}
+
+.element-item .number {
+  position: absolute;
+  right: 8px;
+  top: 5px;
+}
+
+.element-item .weight {
+  position: absolute;
+  left: 10px;
+  top: 76px;
+  font-size: 12px;
+}
+
+.element-item.street                { background: #FFDC00}
+.element-item.architecture          { background: #CCFF00}
+.element-item.nature                { background: #39CCCC}
+.element-item.travel                { background: #F012BE}
+.element-item.portrait              { background: #0074D9}
+
+
+
+.element-item.alkali          { background: #F00; background: hsl(   0, 100%, 50%); }
+.element-item.alkaline-earth  { background: #F80; background: hsl(  36, 100%, 50%); }
+.element-item.lanthanoid      { background: #FF0; background: hsl(  72, 100%, 50%); }
+.element-item.actinoid        { background: #0F0; background: hsl( 108, 100%, 50%); }
+.element-item.transition      { background: #0F8; background: hsl( 144, 100%, 50%); }
+.element-item.post-transition { background: #0FF; background: hsl( 180, 100%, 50%); }
+.element-item.metalloid       { background: #08F; background: hsl( 216, 100%, 50%); }
+.element-item.diatomic        { background: #00F; background: hsl( 252, 100%, 50%); }
+.element-item.halogen         { background: #F0F; background: hsl( 288, 100%, 50%); }
+.element-item.noble-gas       { background: #F08; background: hsl( 324, 100%, 50%); }
