--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,8 +22,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
-<script src="https://npmcdn.com/packery@2.1/dist/packery.pkgd.min.js"></script>
-<script src="https://npmcdn.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+<script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/2.0.1/lazysizes.min.js" async=""></script> -->
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
 <script>
