--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
       <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
         <nav id="filters">
           <ul>
-            <li><a href="javascript:void(0)" data-filter="*"><i class="fa fa-fw fa-refresh" aria-hidden="true"></i></a></li>
-            <li><a href="javascript:void(0)" data-filter=".metal">Street</a></li>
-            <li><a href="javascript:void(0)" data-filter=".post-transition">Architecture</a></li>
-            <li><a href="javascript:void(0)" data-filter=".transition">Nature</a></li>
-            <li><a href="javascript:void(0)" data-filter=".alkali">Travel</a></li>
-            <li><a href="javascript:void(0)" data-filter=".alkaline-earth">Portraits</a></li>
+            <li><a href="javascript:void(0)" data-filter="*" class="active"><i class="fa fa-fw fa-refresh" aria-hidden="true"></i></a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category='street']">Street</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category='architecture']">Architecture</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category='nature']">Nature</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category='travel']">Travel</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category='artifact']">Artifact</a></li>
           </ul>
         </nav>
       </header>
