--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -50,6 +50,12 @@ footer {
 
 /* ---- isotope ---- */
 
+.grid {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* clear fix */
 .grid:after {
   content: '';
@@ -57,70 +63,101 @@ footer {
   clear: both;
 }
 
-/* ---- .element-item ---- */
-
-.element-item {
-  position: relative;
-  float: left;
-  width: 100px;
-  height: 100px;
-  padding: 10px;
-  background: #888;
-  color: #262524;
+.grid-sizer,
+.grid-item {
+  width: 25%;
 }
 
-.element-item > * {
+/* ---- .grid-item ---- */
+
+.grid-item {
+  position: relative;
+  float: left;
+}
+
+.grid-item > * {
   margin: 0;
   padding: 0;
 }
 
-.element-item .name {
-  position: absolute;
-  left: 10px;
-  top: 60px;
-  text-transform: none;
-  letter-spacing: 0;
-  font-size: 12px;
-  font-weight: normal;
+.grid-item > figure {
+  position: relative;
+
+  .overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: .95;
+    transition: all 300ms;
+  }
+
+  .overlay.street                { background: #FFDC00}
+  .overlay.architecture          { background: #CCFF00}
+  .overlay.nature                { background: #39CCCC}
+  .overlay.travel                { background: #F012BE}
+  .overlay.artifact              { background: #0074D9}
+
+  &:hover {
+    cursor: zoom-in;
+
+    .overlay {
+      opacity: .1;
+      transition: all 300ms;
+    }
+  }
+
+  img {
+    display: block;
+    width: 100%;
+    z-index: -10;
+  }
+
+  figcaption {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    .name {
+      position: absolute;
+      left: 1.6rem;
+      bottom: 3.2rem;
+      font-weight: normal;
+    }
+
+    .symbol {
+      position: absolute;
+      left: 1.6rem;
+      top: 0;
+      font-size: 4em;
+      font-weight: bold;
+      color: white;
+    }
+
+    .number {
+      position: absolute;
+      right: 1.6rem;
+      top: 1.6rem;
+    }
+
+    .year {
+      position: absolute;
+      left: 1.6rem;
+      bottom: 0;
+      font-size: 80%;
+    }
+  }
 }
 
-.element-item .symbol {
-  position: absolute;
-  left: 10px;
-  top: 0px;
-  font-size: 42px;
-  font-weight: bold;
-  color: white;
+
+.lazyload,
+.lazyloading {
+    opacity: 0;
 }
-
-.element-item .number {
-  position: absolute;
-  right: 8px;
-  top: 5px;
+.lazyloaded {
+    opacity: 1;
+    transition: opacity 300ms;
 }
-
-.element-item .weight {
-  position: absolute;
-  left: 10px;
-  top: 76px;
-  font-size: 12px;
-}
-
-.element-item.street                { background: #FFDC00}
-.element-item.architecture          { background: #CCFF00}
-.element-item.nature                { background: #39CCCC}
-.element-item.travel                { background: #F012BE}
-.element-item.portrait              { background: #0074D9}
-
-
-
-.element-item.alkali          { background: #F00; background: hsl(   0, 100%, 50%); }
-.element-item.alkaline-earth  { background: #F80; background: hsl(  36, 100%, 50%); }
-.element-item.lanthanoid      { background: #FF0; background: hsl(  72, 100%, 50%); }
-.element-item.actinoid        { background: #0F0; background: hsl( 108, 100%, 50%); }
-.element-item.transition      { background: #0F8; background: hsl( 144, 100%, 50%); }
-.element-item.post-transition { background: #0FF; background: hsl( 180, 100%, 50%); }
-.element-item.metalloid       { background: #08F; background: hsl( 216, 100%, 50%); }
-.element-item.diatomic        { background: #00F; background: hsl( 252, 100%, 50%); }
-.element-item.halogen         { background: #F0F; background: hsl( 288, 100%, 50%); }
-.element-item.noble-gas       { background: #F08; background: hsl( 324, 100%, 50%); }
