--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
         <nav id="filters">
           <ul>
             <li><a href="javascript:void(0)" data-filter="*" class="active"><i class="fa fa-fw fa-refresh" aria-hidden="true"></i></a></li>
-            <li><a href="javascript:void(0)" data-filter="[data-category='street']">Street</a></li>
-            <li><a href="javascript:void(0)" data-filter="[data-category='architecture']">Architecture</a></li>
-            <li><a href="javascript:void(0)" data-filter="[data-category='nature']">Nature</a></li>
-            <li><a href="javascript:void(0)" data-filter="[data-category='travel']">Travel</a></li>
-            <li><a href="javascript:void(0)" data-filter="[data-category='artifact']">Artifact</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category~='street']">Street</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category~='architecture']">Architecture</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category~='nature']">Nature</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category~='travel']">Travel</a></li>
+            <li><a href="javascript:void(0)" data-filter="[data-category~='artifact']">Artifact</a></li>
           </ul>
         </nav>
       </header>
