--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -93,11 +93,39 @@ footer {
     transition: all 300ms;
   }
 
-  .overlay.street                { background: #FFDC00}
-  .overlay.architecture          { background: #CCFF00}
-  .overlay.nature                { background: #39CCCC}
-  .overlay.travel                { background: #F012BE}
-  .overlay.artifact              { background: #0074D9}
+  .overlay.street                { background: #FFDC00} // Yellow
+  .overlay.street.architecture   { background: #FF851B} // Orange
+  .overlay.street.nature         { background: #7FDBFF} // Aqua
+  .overlay.street.travel         { background: #B10DC9} // Purple
+  .overlay.street.artifact       { background: #85144b} // Maroon
+
+
+  .overlay.architecture          { background: #CCFF00} // Chartreuse
+  .overlay.architecture.street   { background: #FF851B} // Orange
+  .overlay.architecture.nature   { background: #2ECC40} // Green
+  .overlay.architecture.travel   { background: #001F3F} // Navy
+  .overlay.architecture.artifact { background: #3D9970} // Olive
+
+
+  .overlay.nature                { background: #39CCCC} // Teal
+  .overlay.nature.street         { background: #7FDBFF} // Aqua
+  .overlay.nature.architecture   { background: #2ECC40} // Green
+  .overlay.nature.travel         { background: #0074D9} // Blue
+  .overlay.nature.artifact       { background: #01FF70} // Lime
+
+  .overlay.travel                { background: #F012BE} // Fuschia
+  .overlay.travel.street         { background: #B10DC9} // Purple
+  .overlay.travel.architecture   { background: #001F3F} // Navy
+  .overlay.travel.nature         { background: #0074D9} // Blue
+  .overlay.travel.artifact       { background: #FF7F50} // Coral
+
+
+  .overlay.artifact              { background: #0074D9} // Red
+  .overlay.artifact.street       { background: #85144b} // Maroon
+  .overlay.artifact.architecture { background: #3D9970} // Olive
+  .overlay.artifact.nature       { background: #01FF70} // Lime
+  .overlay.artifact.travel       { background: #FF7F50} // Coral
+
 
   &:hover {
     cursor: zoom-in;
